* Reset memory status from `soft_limit` to `ok` when pruning is no longer required.
  (See {ml-pull}1193[#1193], issue: {ml-issue}1131[#1131].)
* Fix restore from training state for classification and regression. (See
  {ml-pull}1197[#1197].)
* Improve the initialization of seasonal components for anomaly detection. (See
  {ml-pull}1201[#1201], issue: {ml-issue}#1178[#1178].)

== {es} version 7.7.1

=== Bug Fixes

* Fixed background persistence of categorizer state (See {ml-pull}1137[#1137],
  issue: {ml-issue}1136[#1136].)
* Fix classification job failures when number of classes in configuration differs 
  from the number of classes present in the training data. (See {ml-pull}1144[#1144].)

== {es} version 7.7.0

=== New Features

* Add instrumentation to report statistics related to data frame analytics jobs, i.e.
progress, memory usage, etc. (See {ml-pull}906[#906].)
* Multiclass classification. (See {ml-pull}1037[#1037].)

=== Enhancements

* Improve computational performance of the feature importance computation. (See {ml-pull}1005[1005].)
* Improve initialization of learn rate for better and more stable results in regression
and classification. (See {ml-pull}948[#948].)
* Add number of processed training samples to the definition of decision tree nodes.
(See {ml-pull}991[#991].)
* Add new model_size_stats fields to instrument categorization.  (See {ml-pull}948[#948]
and {pull}51879[#51879], issue: {issue}50794[#50749].)
* Improve upfront memory estimation for all data frame analyses, which were higher than
necessary. This will improve the allocation of data frame analyses to cluster nodes.
(See {ml-pull}1003[#1003].)
* Upgrade the compiler used on Linux from gcc 7.3 to gcc 7.5, and the binutils used in
the build from version 2.20 to 2.34.  (See {ml-pull}1013[#1013].)
* Add instrumentation of the peak memory consumption for data frame analytics jobs.
(See {ml-pull}1022[#1022].)